# egui_graphs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  LICENSE  README.md  WINDOWS_SETUP.md  smr-coder183-changelog.md
.github/workflows/: no-default-features.yml  pages.yml  rust.yml
crates/code-analyzer-web/: Cargo.toml  README.md  build.sh  index.html  serve.sh
crates/code-analyzer-web/src/: lib.rs
crates/demo-core/: Cargo.toml  README.md  build.rs
crates/demo-core/assets/: bipartite.json  bipartite_60x40.json  bipartite_beautiful_with_positions.json  cliques.json  cliques_5x20_bridged.json  cliques_6x24_bridged_undirected.json  crescent.json  grid.json  grid_30x30_edges.json  grid_40x40_undirected.json  not_running.json  petals.json  petals_6x40_hub.json  petals_7x36_hub_undirected.json  ring_1000_undirected.json  ring_400_bidir.json  sample_import_fr.json  sample_import_hier.json  sample_with_positions.json  scale_free_ba_1200_m3_undirected.json  small_world_ws_600_k8_p015_undirected.json  star_256_bidir.json  star_bidirected.json  tree_binary.json  tree_binary_1023.json
crates/demo-core/src/: drawers.rs  event_filters.rs  graph_ops.rs  import.rs  info_overlay.rs  keybindings.rs  lib.rs  metrics.rs  settings.rs  spec.rs  status.rs  ui_consts.rs  util.rs
crates/demo-core/src/overlays/: debug_overlay.rs  info_overlay.rs  mod.rs
crates/demo-core/src/tabs/: import_load.rs  mod.rs  playground.rs
crates/demo-web/: Cargo.toml  index.html
crates/demo-web/src/: lib.rs
crates/egui_graphs/: Cargo.toml
crates/egui_graphs/benches/: fruchterman_reingold.rs
crates/egui_graphs/examples/: animated_nodes.rs  basic.rs  basic_custom.rs  circular_layout.rs  code_analyzer.rs  demo.rs  flex_nodes.rs  label_change.rs  multiple.rs  rainbow_edges.rs  undirected.rs  window.rs
crates/egui_graphs/src/: graph.rs  graph_view.rs  helpers.rs  lib.rs  metadata.rs  settings.rs
crates/egui_graphs/src/draw/: displays.rs  drawer.rs  mod.rs
crates/egui_graphs/src/draw/displays_default/: edge.rs  edge_shape.rs  edge_shape_builder.rs  mod.rs  node.rs
crates/egui_graphs/src/elements/: edge.rs  mod.rs  node.rs
crates/egui_graphs/src/events/: event.rs  sink.rs
crates/egui_graphs/src/layouts/: layout.rs  mod.rs
crates/egui_graphs/src/layouts/circular/: layout.rs  mod.rs
crates/egui_graphs/src/layouts/force_directed/: layout.rs  mod.rs
crates/egui_graphs/src/layouts/force_directed/extras/: center_gravity.rs  core.rs  mod.rs
crates/egui_graphs/src/layouts/force_directed/implementations/: mod.rs
crates/egui_graphs/src/layouts/force_directed/implementations/fruchterman_reingold/: core.rs  with_extras.rs
crates/egui_graphs/src/layouts/hierarchical/: layout.rs  mod.rs
crates/music-visualizer/: Cargo.toml  README.md  Trunk.toml  build.sh  index.html  serve.sh
crates/music-visualizer/src/: lib.rs
demo-core/: Cargo.toml
demo-core/src/: lib.rs
demo-web/: Cargo.toml  README.md
demo-web/src/: lib.rs
demos/: README.md
demos/wikilinks/: Cargo.toml  README.md
demos/wikilinks/src/: app.rs  lib.rs  main.rs  node.rs  state.rs  url.rs  url_retriever.rs
demos/wikilinks/src/views/: graph.rs  input.rs  mod.rs  style.rs  toolbox.rs
egui_graph/: Cargo.toml
egui_graph/src/: lib.rs
example/: Cargo.toml  README.md
example/src/: main.rs
examples/: README.md  animated_nodes.rs  basic.rs  bevy.rs  bevy_basic.rs  configurable.rs  custom_draw.rs  demo.rs  flex_nodes.rs  interactive.rs  label_change.rs  layouts.rs  multiple.rs  undirected.rs
examples/animated_nodes/: Cargo.toml  README.md
examples/animated_nodes/src/: main.rs  node.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/basic_custom/: Cargo.toml  README.md
examples/basic_custom/src/: main.rs
examples/basic_custom_drawing/: Cargo.toml  README.md
examples/basic_custom_drawing/src/: main.rs
examples/basic_interactive/: Cargo.toml
examples/basic_interactive/src/: main.rs
examples/basic_undirected/: Cargo.toml  README.md
examples/basic_undirected/src/: main.rs
examples/bevy/: Cargo.toml  README.md
examples/bevy/src/: main.rs
examples/bevy_basic/: Cargo.toml  README.md
examples/bevy_basic/src/: main.rs
examples/bevy_basic_multiple/: Cargo.toml  README.md
examples/bevy_basic_multiple/src/: main.rs
examples/configurable/: Cargo.toml  README.md  index.html
examples/configurable/src/: lib.rs  main.rs  settings.rs
examples/custom_draw/: Cargo.toml  README.md
examples/custom_draw/src/: main.rs  node.rs
examples/demo/: Cargo.toml  README.md
examples/demo/src/: drawers.rs  main.rs  settings.rs
examples/flex_nodes/: Cargo.toml  README.md
examples/flex_nodes/src/: main.rs  node.rs
examples/interactions/: README.md
examples/interactions/src/: main.rs
examples/interactive/: Cargo.toml  README.md
examples/interactive/src/: main.rs  settings.rs
examples/label_change/: Cargo.toml  README.md
examples/layouts/: Cargo.toml  README.md
examples/multiple/: Cargo.toml  README.md
examples/rainbow_edges/: Cargo.toml  README.md
examples/undirected/: Cargo.toml  README.md
examples/wasm_custom_draw/: Cargo.toml  README.md  Trunk.toml  index.html
examples/wasm_custom_draw/assets/: manifest.json
examples/wasm_custom_draw/src/: main.rs  node.rs
examples/wasm_example/: Cargo.toml  README.md
examples/window/: Cargo.toml
src/: change.rs  changes.rs  computed.rs  drawer.rs  elements.rs  elements_props.rs  frame_state.rs  graph.rs  graph_view.rs  graph_wrapper.rs  helpers.rs  lib.rs  main.rs  metadata.rs  selections.rs  settings.rs  space_modifications.rs  state.rs  state_computed.rs  subgraphs.rs  transform.rs
src/draw/: custom.rs  default_edge.rs  default_node.rs  displays.rs  drawer.rs  edge.rs  layers.rs  mod.rs  node.rs
src/drawer/: drawer.rs
src/elements/: color.rs  edge.rs  edge_style.rs  mod.rs  node.rs  node_style.rs  style_edge.rs
src/events/: event.rs  mod.rs  node.rs
src/layout/: default.rs  hierarchical.rs  layout.rs  mod.rs
src/layouts/: default.rs  hierarchical.rs  layout.rs  mod.rs  random.rs
tests/: serde_roundtrip.rs
(+31 files in other folders)
