[workspace]
members = [
  "crates/egui_graphs",
  "crates/demo-core",
  "crates/demo-web",
  "crates/code-analyzer-web",
]
resolver = "2"

[workspace.package]
version = "0.29.0"
edition = "2021"
license = "MIT"
homepage = "https://blitzar-tech.github.io/egui_graphs/"
repository = "https://github.com/blitzar-tech/egui_graphs"
authors = ["Dmitrii Samsonov <blitzar90@gmail.com>, <blitzarx1@gmail.com>"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = 0 }
enum_glob_use = { level = "deny", priority = 1 }
perf = { level = "deny", priority = 2 }
style = { level = "deny", priority = 3 }
module_name_repetitions = { level = "allow", priority = 6 }
cast_precision_loss = { level = "allow", priority = 7 }
float_cmp = { level = "allow", priority = 8 }
cast_possible_truncation = { level = "allow", priority = 9 }
cast_sign_loss = { level = "allow", priority = 10 }
out_of_bounds_indexing = { level = "allow", priority = 11 }
must_use_candidate = { level = "allow", priority = 12 }
struct_excessive_bools = { level = "allow", priority = 13 }
return_self_not_must_use = { level = "allow", priority = 14 }

[workspace.dependencies]
egui = { version = "0.33", default-features = false }
eframe = "0.33"
egui_extras = { version = "0.33", default-features = false }
petgraph = { version = "0.8", default-features = false }
serde = "1.0"
serde_json = "1.0"
rand = "0.9"
web-time = "1.1"
crossbeam = "0.8"
bevy = "0.17"
bevy_egui = "0.38"
ureq = { version = "3", default-features = true }
criterion = { version = "0.7", features = ["html_reports"] }
