[package]
name = "demo-core"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"
repository.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui_graphs = { path = "../egui_graphs" }
petgraph = { workspace = true, default-features = false, features = [
  "graphmap",
  "stable_graph",
  "matrix_graph",
] }
rand.workspace = true
instant.workspace = true
crossbeam = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[features]
# Enable events in this demo and pull in crossbeam for native channels
events = ["egui_graphs/events", "dep:crossbeam"]
