[package]
name = "demo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
build = "build.rs"

[dependencies]
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
egui_graphs = { path = "../egui_graphs" }
petgraph = { workspace = true, default-features = false, features = [
  "graphmap",
  "stable_graph",
  "matrix_graph",
] }
rand.workspace = true
instant.workspace = true
crossbeam = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rfd = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "HtmlInputElement",
  "FileList",
  "File",
  "FileReader",
  "EventTarget",
  "ProgressEvent",
  "HtmlElement",
  "Blob",
  "Url",
  "HtmlAnchorElement",
] }

[features]
# Enable events in this demo and pull in crossbeam for native channels
events = ["egui_graphs/events", "dep:crossbeam"]
