[package]
name = "demo-web"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
egui.workspace = true
eframe.workspace = true
demo-core = { path = "../demo-core" }
egui_graphs = { path = "../egui_graphs" }

[features]
# Forward the `events` feature to crates that actually implement it.
events = ["demo-core/events", "egui_graphs/events"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
