[package]
name = "music-visualizer"
version = "0.1.0"
edition = "2021"
description = "Dynamic music visualizer using fractal patterns"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "web_screen_reader",
] }
egui = "0.33"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "HtmlInputElement",
    "File",
    "FileList",
    "Blob",
    "Url",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaDevices",
    "Navigator",
    "AudioContext",
    "BaseAudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "AnalyserNode",
    "MediaStreamAudioSourceNode",
    "MediaElementAudioSourceNode",
    "GainNode",
    "Event",
    "EventTarget",
    "CssStyleDeclaration",
    "console",
] }
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
