[package]
name = "configurable"
version = "0.1.0"
authors = ["Dmitrii Samsonov <blitzarx1@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
egui_graphs = { path = "../../", features = ["events"] }
egui = "0.23"
egui_plot = "0.23"
eframe = "0.23"
petgraph = "0.6"
fdg-sim = "0.9"
rand = "0.8"
crossbeam = "0.8"
