[package]
name = "demo"
version = "0.1.0"
authors = ["Dmitrii Samsonov <blitzarx1@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
egui_graphs = { path = "../..", features = ["events"] }
egui = "0.31"
eframe = "0.31"
serde_json = "1.0"
petgraph = "0.6"
fdg = { git = "https://github.com/grantshandy/fdg" }
fastrand = "2.3"
crossbeam = "0.8"
